<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:text="@string/destino"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/id_destino"
            android:inputType="text"/>

        <TextView
            android:text="@string/tipo_viagem"
            android:textSize="22sp"/>

        <RadioGroup
            android:id="@+id/id_tipo_viagem"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/id_lazer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lazer"/>

            <RadioButton
                android:id="@+id/id_negocios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios"/>

        </RadioGroup>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/data_saida"/>

            <TextView
                android:layout_gravity="center"
                android:text="@string/data_chegada"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/id_data_saida"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>

            <Button
                android:id="@+id/id_data_chegada"
                android:onClick="selecionarData"
                android:text="@string/selecione"/>

        </TableRow>

        <TextView
            android:text="@string/orcamento"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/id_orcamento"
            android:inputType="numberDecimal"/>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/quantidade_pessoas"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/id_quantidade_pessoas"
                android:inputType="number"/>

        </TableRow>

        <Button
            android:onClick="salvarViagem"
            android:text="@string/salvar"/>

    </TableLayout>

</ScrollView>